tests/ui/consts/issue-116186.stderr
error[E0425]: cannot find value `N` in this scope
  --> $DIR/issue-116186.rs:4:28
   |
LL | fn something(path: [usize; N]) -> impl Clone {
   |                            ^ not found in this scope
   |
help: you might be missing a const parameter
   |
LL | fn something<const N: /* Type */>(path: [usize; N]) -> impl Clone {
   |             +++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
